--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=tombola
+spring.datasource.url=jdbc:mysql://${DB_HOST:localhost}:${DB_PORT:3306}/${DB_NAME:mydb}
+spring.datasource.username=${DB_USER:myuser}
+spring.datasource.password=${DB_PASSWORD:mypass}
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
+
+# ======================== SPRING ==========================
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.liquibase.enabled=true
+
+oauth.client.id=admin
+oauth.client.secret={noop}nimda
